--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "archiver": "^6.0.1",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -27,6 +28,7 @@
     "sequelize": "^6.33.0"
   },
   "devDependencies": {
+    "@types/archiver": "^6.0.1",
     "@types/bcryptjs": "^2.4.4",
     "@types/cookie-parser": "^1.4.4",
     "@types/cors": "^2.8.14",
